2005-11-16  Dan Winship  <danw@novell.com>

	* libsoup/soup-xmlrpc-message.c
	(soup_xmlrpc_message_start_member): add the "name" element to the
	struct member. #321362, patch from Sebastian Bauer.

2005-11-10  Dan Winship  <danw@novell.com>

	* configure.in: bump version to 2.2.90. This will not be
	officially released, but once these patches have gotten some
	testing they may be pulled up to the gnome-2-12 branch.

	* libsoup/soup-connection.c:
	* libsoup/soup-server.c: 
	* libsoup/soup-session.c: 
	* libsoup/soup-socket.c: add an "async-context" property,
	which gets passed from server to socket, and session to connection
	to socket, allowing async usage outside the main thread. Based on
	patches from Armin Bauer and Jürg Billeter.

	* libsoup/soup-misc.c (soup_add_io_watch, soup_add_idle,
	soup_add_timeout): utility routines to add watches, idles, and
	timeouts to non-default GMainContexts.

	* libsoup/soup-message-io.c (io_write): set the read state
	appropriately after writing a "100 Continue" response
	(io_read): More 100-Continue stuff. I don't think this is quite
	right so it will probably change again later.

2005-11-01  Dan Winship  <danw@novell.com>

	* docs/reference/libsoup-docs.sgml: tell it to generate an index

	* docs/reference/tmpl/*.sgml: regen with newer gtk-doc

2005-11-01  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection.c (set_current_request,
	clear_current_request): Cast the argument to
	g_object_add/remove_weak_pointer to the wrong type, to make gcc
	4.1 happy, because C is stupid and "void **" means "a pointer to a
	void *", not "a pointer to any kind of pointer".

	* libsoup/soup-xmlrpc-response.c
	(soup_xmlrpc_value_dump_internal): fix gccism. #320349, from
	Roland Illig.

2005-10-27  Dan Winship  <danw@novell.com>

	* libsoup/soup-socket.c (soup_socket_client_new_async,
	soup_socket_client_new_sync): unref the SoupAddress passed to
	soup_socket_connect to avoid a leak. Based on a patch from Wang
	Xin.